--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   "dependencies": {
     "axios": "^1.1.2",
     "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
     "cyclic-dynamodb": "0.0.21",
+    "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
     "express": "^4.18.1",
     "follow-redirects": "^1.15.2",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "uuid": "^9.0.0"
   }
 }
